started working on the header of the rps-gui. have a bas concept down. will jump back on it tonight.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
 </head>
 <body>
+  <div class="header-container">
+    <div class="pokeball-png">
+      <img src="/images/pokeball.png" alt="pokeball image"
+      height="180px"
+      width="180px"
+      >
+    </div>
+    <div class="header-container-middle">
+      <div class="pic-container">
+        <img class="head-pics" src="/images/fire-type.png" alt="Pokemon fire type symbol"
+          height="80px"
+          width="80px"
+          
+        >
+        <img class="head-pics" src="/images/water-type.png" alt="Pokemon water type symbol"
+          height="80px"
+          width="80px"
+        >
+        <img class="head-pics" src="/images/grass-type.png" alt="Pokemon grass type symbol"
+          height="80px"
+          width="80px"
+        >
+      </div>
+      <div class="header-text">
+        <div class="fire">Fire,</div> 
+        <div class="water">Water,</div>
+        <div class="grass">Grass</div>
+      </div>
+      <div class="sub-header">A Pokemon inspired rock, paper, scissors game.</div>
+    </div>
+    <div class="pokeball-png">
+      <img src="/images/pokeball.png" alt="pokeball image"
+      height="180px"
+      width="180px"
+      >
+    </div>
+  </div>
+
     
-    <script src="javascript.js"></script>
+  <script src="javascript.js"></script>
 </body>
 </html>
