--- a/index.html
+++ b/index.html
@@ -11,39 +11,79 @@
   <div class="header-container">
     <div class="pokeball-png">
       <img src="/images/pokeball.png" alt="pokeball image"
-      height="180px"
-      width="180px"
+      height="140px"
+      width="140px"
       >
     </div>
     <div class="header-container-middle">
       <div class="pic-container">
         <img class="head-pics" src="/images/fire-type.png" alt="Pokemon fire type symbol"
-          height="80px"
-          width="80px"
-          
-        >
+          height="40px"
+          width="40px">
         <img class="head-pics" src="/images/water-type.png" alt="Pokemon water type symbol"
-          height="80px"
-          width="80px"
-        >
+          height="40px"
+          width="40px">
         <img class="head-pics" src="/images/grass-type.png" alt="Pokemon grass type symbol"
-          height="80px"
-          width="80px"
-        >
+          height="40px"
+          width="40px">
       </div>
       <div class="header-text">
         <div class="fire">Fire,</div> 
         <div class="water">Water,</div>
-        <div class="grass">Grass</div>
+        <div class="grass">Grass!</div>
       </div>
       <div class="sub-header">A Pokemon inspired rock, paper, scissors game.</div>
     </div>
     <div class="pokeball-png">
       <img src="/images/pokeball.png" alt="pokeball image"
-      height="180px"
-      width="180px"
+      height="140px"
+      width="140px"
       >
     </div>
+  </div>
+  <div class="content-container">
+    <div class="cpu-container">
+      <div class="cpu-health">
+        <img id="cpulife1" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife2" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife3" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife4" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife5" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+      </div>
+      <div class="cpu-choice">
+        <img class="cpu-choice-img" src="/images/fire-type.png" alt="cpu choice placer holder for fire/water/grass"
+        height="100px"
+        width="100px">
+      </div>
+    </div>
+    <div class="player-container">
+      <div class="player-choice">
+        <img id="player-choice-img" src="/images/water-type.png" alt="cpu choice placer holder for fire/water/grass"
+        height="150px"
+        width="150px">
+      </div>
+      <div class="player-health">
+        <img id="playerlife1" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife2" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife3" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife4" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife5" src="/images/pokeball.png" alt="pokeball representing amount of lives">
+      </div>
+
+    </div>
+    <div class="dialog-container">
+      <div class="dialog-box">
+        <p>Click to Start</p>
+      </div>
+      <div class="player-choices">
+        <img class="fire" id="btn" src="/images/fire-type.png" alt="fire player choice">
+        <img class="water" id="btn" src="/images/water-type.png" alt="water player choice">
+        <img class="grass" id="btn" src="/images/grass-type.png" alt="grass player choice">
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-text">Created and copyrights by Michael Hughes 2022</div>
   </div>
 
     
