took ' / ' out of img src files. still troubleshooting the pic issue.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
   <div class="header-container">
     <div class="pokeball-png">
-      <img src="/pokeball.png" alt="pokeball image"
+      <img src="pokeball.png" alt="pokeball image"
       height="140px"
       width="140px"
       >
     </div>
     <div class="header-container-middle">
       <div class="pic-container">
-        <img class="head-pics" src="/fire-type.png" alt="Pokemon fire type symbol"
+        <img class="head-pics" src="fire-type.png" alt="Pokemon fire type symbol"
           height="40px"
           width="40px">
-        <img class="head-pics" src="/water-type.png" alt="Pokemon water type symbol"
+        <img class="head-pics" src="water-type.png" alt="Pokemon water type symbol"
           height="40px"
           width="40px">
-        <img class="head-pics" src="/grass-type.png" alt="Pokemon grass type symbol"
+        <img class="head-pics" src="grass-type.png" alt="Pokemon grass type symbol"
           height="40px"
           width="40px">
       </div>
@@ -36,7 +36,7 @@
       <div class="sub-header">A Pokemon inspired rock, paper, scissors game.</div>
     </div>
     <div class="pokeball-png">
-      <img src="/pokeball.png" alt="pokeball image"
+      <img src="pokeball.png" alt="pokeball image"
       height="140px"
       width="140px"
       >
@@ -45,30 +45,30 @@
   <div class="content-container">
     <div class="cpu-container">
       <div class="cpu-health">
-        <img id="cpulife1" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="cpulife2" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="cpulife3" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="cpulife4" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="cpulife5" src="/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife1" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife2" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife3" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife4" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="cpulife5" src="pokeball.png" alt="pokeball representing amount of lives">
       </div>
       <div class="cpu-choice">
-        <img id ="cpu-choice-img" class="cpu-choice-img" src="/fire-type.png" alt="cpu choice placer holder for fire/water/grass"
+        <img id ="cpu-choice-img" class="cpu-choice-img" src="fire-type.png" alt="cpu choice placer holder for fire/water/grass"
         height="100px"
         width="100px">
       </div>
     </div>
     <div class="player-container">
       <div class="player-choice">
-        <img id="player-choice-img" src="/water-type.png" alt="cpu choice placer holder for fire/water/grass"
+        <img id="player-choice-img" src="water-type.png" alt="cpu choice placer holder for fire/water/grass"
         height="150px"
         width="150px">
       </div>
       <div class="player-health">
-        <img id="playerlife1" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="playerlife2" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="playerlife3" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="playerlife4" src="/pokeball.png" alt="pokeball representing amount of lives">
-        <img id="playerlife5" src="/pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife1" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife2" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife3" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife4" src="pokeball.png" alt="pokeball representing amount of lives">
+        <img id="playerlife5" src="pokeball.png" alt="pokeball representing amount of lives">
       </div>
 
     </div>
@@ -78,9 +78,9 @@
           balls at the top-left represent the CPU's health. The bottom-right pokeballs is your health. Choose your pokemon type to begin!</p>
       </div>
       <div class="player-choices">
-        <img class="btn" id="firebtn" src="/fire-type.png" alt="fire player choice">
-        <img class="btn" id="waterbtn" src="/water-type.png" alt="water player choice">
-        <img class="btn" id="grassbtn" src="/grass-type.png" alt="grass player choice">
+        <img class="btn" id="firebtn" src="fire-type.png" alt="fire player choice">
+        <img class="btn" id="waterbtn" src="water-type.png" alt="water player choice">
+        <img class="btn" id="grassbtn" src="grass-type.png" alt="grass player choice">
       </div>
     </div>
   </div>
